--- a/package.json
+++ b/package.json
@@ -3,14 +3,18 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "android": "react-native run-android",
-    "ios": "react-native run-ios",
+    "android": "react-native run-android --port=8085",
+    "ios": "react-native run-ios --port=8086",
     "lint": "eslint .",
     "start": "react-native start",
     "test": "jest"
   },
   "dependencies": {
+    "axios": "^1.6.8",
+    "i18next": "^23.10.1",
+    "moment": "^2.30.1",
     "react": "18.2.0",
+    "react-i18next": "^14.1.0",
     "react-native": "0.73.6"
   },
   "devDependencies": {
