--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
     "test": "jest"
   },
   "dependencies": {
-    "axios": "^1.6.8",
+    "axios": "^0.26.0",
     "i18next": "^23.10.1",
     "moment": "^2.30.1",
     "react": "18.2.0",
     "react-i18next": "^14.1.0",
-    "react-native": "0.73.6"
+    "react-native": "0.73.6",
+    "react-redux": "^7.2.9",
+    "redux": "^4.2.1",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
